--- a/app/views/pages/home.html.twig
+++ b/app/views/pages/home.html.twig
@@ -1,1 +1,17 @@
-{{ titre }}
+{% extends "base.html.twig" %}
+
+{% block title %}Home page Jean{% endblock %}
+
+{% block head %}
+    {{ parent() }}
+    <style type="text/css">
+        .important { color: #336699; }
+    </style>
+{% endblock %}
+{% block body %}
+    <h1>Index</h1>
+    <p class="important">
+        Bienvenu sur ma page de blog JF
+    </p>
+{% endblock %}
+
