--- a/app/views/pages/home.html.twig
+++ b/app/views/pages/home.html.twig
@@ -5,13 +5,31 @@
 {% block head %}
     {{ parent() }}
     <style type="text/css">
-        .important { color: #336699; }
+        .important {
+            color: #336699;
+        }
     </style>
 {% endblock %}
 {% block body %}
-    <h1>Index</h1>
-    <p class="important">
-        Bienvenu sur ma page de blog JF
-    </p>
+    <div class="container">
+        <div class="jumbotron mt-3">
+            <h1 class="display-3">"Billet simple pour l'Alaska"</h1>
+            <p class="lead">Un roman de Jean Forteroche !</p>
+            <hr class="my-4">
+            <h3>Dernière publication - Quatrième chapitre</h3>
+            <p>Mensonge, le sophisme, n'est muni d'une grille. Cette brusque apparition avait pétrifié, c'était
+                maintenant seulement qu'il était lancé dans une fenêtre. Décidé à partir, et emporter à la nuit.
+                Rends-moi heureux et je serai comme le voyageur, que je pris le chemin de leur pays, moins loin dans
+                certains autres, tant grandes que petites. Empêcher que le souvenir lui revint. Rendez-vous avec elles
+                au champ d'honneur... Population aimable et faible, il est toujours où est son esprit, ses ennuis, il ne
+                pensait pas à se plaindre et de n'y jamais rentrer, non-mort. Ensemble nous passions des heures à
+                regarder les autres en ont, un mouchoir tordu, que les femmes à la place et si vous êtes en veine
+                d'optimisme, dont nous avons à cette cour.</p>
+
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Lire</a>
+            </p>
+        </div>
+    </div>
 {% endblock %}
 
