--- a/app/views/pages/base.html.twig
+++ b/app/views/pages/base.html.twig
@@ -10,7 +10,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Blog de Jean Forteroche</a>
+    <a class="navbar-brand" href="../../app/views/pages/home.html.twig">Blog de Jean Forteroche</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
             aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="home.html.twig">Accueil</a>
+                <a class="nav-link" href="../../app/views/pages/home.html.twig">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Qui suis-je?</a>
