--- a/app/views/pages/base.html.twig
+++ b/app/views/pages/base.html.twig
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="#">Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../../app/views/pages/contact.html.twig">Contact</a>
+                <a class="nav-link" href="index.php?action=contact">Contact</a>
             </li>
         </ul>
     </div>
