--- a/app/views/pages/base.html.twig
+++ b/app/views/pages/base.html.twig
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../../app/views/pages/home.html.twig">Blog de Jean Forteroche</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+    <a class="navbar-brand" href="index.php?action=home">Blog de Jean Forteroche</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
             aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="../../app/views/pages/home.html.twig">Accueil</a>
+                <a class="nav-link" href="index.php?action=home">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Qui suis-je?</a>
@@ -36,11 +36,22 @@
 
 <div id="content">{% block body %}{% endblock %}</div>
 
-<div id="footer">
-    {% block footer %}
+{#<div id="footer">#}
+{#    {% block footer %}#}
+{#        &copy; Copyright 2019 by <a href="https://tolan.me/">BenCode</a>.#}
+{#    {% endblock %}#}
+{#</div>#}
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">
         &copy; Copyright 2019 by <a href="https://tolan.me/">BenCode</a>.
-    {% endblock %}
-</div>
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
