--- a/app/views/pages/base.html.twig
+++ b/app/views/pages/base.html.twig
@@ -2,6 +2,7 @@
 <html>
 <head>
     {% block head %}
+        <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="css/bootstrap.min.css"/>
         <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
@@ -34,7 +35,7 @@
     </div>
 </nav>
 
-<div id="content">{% block body %}{% endblock %}</div>
+<div class="backJF" id="content">{% block body %}{% endblock %}</div>
 
 {#<div id="footer">#}
 {#    {% block footer %}#}
