--- a/app/views/pages/base.html.twig
+++ b/app/views/pages/base.html.twig
@@ -2,46 +2,70 @@
 <html>
 <head>
     {% block head %}
-        <link rel="stylesheet" href="css/style.css"/>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <meta name="author" content="">
+
         <link rel="stylesheet" href="css/bootstrap.min.css"/>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+        <link href="css/toolkit.css" rel="stylesheet">
+        <link href="css/application.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css"/>
         <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-    <a class="navbar-brand" href="index.php?action=home">Blog de Jean Forteroche</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
-            aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-toggleable-sm fixed-top navbar-inverse bg-primary app-navbar">
+    <button
+            class="navbar-toggler navbar-toggler-right hidden-md-up"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarResponsive"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.php?action=home">Accueil</a>
-            </li>
+    <a class="navbar-brand" href="index.php?action=home">
+        <img src="images/brand-white.png" alt="brand">
+    </a>
+
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Qui suis-je?</a>
+                <a class="nav-link" href="index.php?action=home">Accueil<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="index.php?action=home">Un billet pour Alaska</a>
+            </li>
+{#            <li class="nav-item">#}
+{#                <a class="nav-link" data-toggle="modal" href="#msgModal">Livres</a>#}
+{#            </li>#}
             <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="index.php?action=books">Livres</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="index.php?action=contact">Contact</a>
             </li>
         </ul>
+
+        <ul id="#js-popoverContent" class="nav navbar-nav float-right mr-0 hidden-sm-down">
+            <li class="nav-item">
+                <button class="btn btn-secondary">Admin</button>
+            </li>
+        </ul>
+
     </div>
 </nav>
 
-<div class="backJF" id="content">{% block body %}{% endblock %}</div>
+<div id="content">{% block body %}{% endblock %}</div>
 
-{#<div id="footer">#}
-{#    {% block footer %}#}
-{#        &copy; Copyright 2019 by <a href="https://tolan.me/">BenCode</a>.#}
-{#    {% endblock %}#}
-{#</div>#}
 <!-- Footer -->
 <footer class="page-footer font-small blue pt-4">
 
@@ -57,6 +81,10 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/tether.min.js"></script>
+<script src="js/chart.js"></script>
+<script src="js/toolkit.js"></script>
+<script src="js/application.js"></script>
 
 </body>
 </html>
