--- a/app/views/pages/books.html.twig
+++ b/app/views/pages/books.html.twig
@@ -1,37 +1,19 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Home page Jean{% endblock %}
-
-{% block head %}
-    {{ parent() }}
-    <style type="text/css">
-        .important {
-            color: #336699;
-        }
-    </style>
-{% endblock %}
 {% block body %}
     <div class="profile-header" style="background-image: url(images/iceland.jpg);">
         <div class="container">
             <div class="container-inner">
-                <img class="rounded-circle media-object" src="images/avatar-dhg.png">
-                <h3 class="profile-header-user">Dave Gamache</h3>
-                <p class="profile-header-bio">
-                    I wish i was a little bit taller, wish i was a baller, wish i had a girl… also.
-                </p>
+
+                <h3 class="profile-header-user">Livres</h3>
+
             </div>
         </div>
 
         <nav class="profile-header-nav">
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Photos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Others</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Anothers</a>
+                    <a class="nav-link" href="#">Disponibles sur Amazon</a>
                 </li>
             </ul>
         </nav>
@@ -86,21 +68,6 @@
             <img data-width="640" data-height="640" data-action="zoom" src="images/instagram_16.jpg">
         </div>
 
-        <div>
-            <img data-width="640" data-height="640" data-action="zoom" src="images/instagram_17.jpg">
-        </div>
 
-        <div>
-            <img data-width="640" data-height="640" data-action="zoom" src="images/instagram_18.jpg">
-        </div>
-
-        <div>
-            <img data-width="640" data-height="400" data-action="zoom" src="images/instagram_1.jpg">
-        </div>
-
-        <div>
-            <img data-width="640" data-height="640" data-action="zoom" src="images/instagram_2.jpg">
-        </div>
     </div>
 {% endblock %}
-
