--- a/app/views/pages/base.html.twig
+++ b/app/views/pages/base.html.twig
@@ -67,10 +67,10 @@
 <div id="content">{% block body %}{% endblock %}</div>
 
 <!-- Footer -->
-<footer class="page-footer font-small blue pt-4">
+<footer class="footer">
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">
+    <div class="footer-copyright text-center">
         &copy; Copyright 2019 by <a href="https://tolan.me/">BenCode</a>.
     </div>
     <!-- Copyright -->
