--- a/public/css/toolkit.css
+++ b/public/css/toolkit.css
@@ -5511,6 +5511,9 @@ a.bg-inverse:focus, a.bg-inverse:hover {
 .mt-5 {
   margin-top: 3rem !important; }
 
+.mt-30 {
+  margin-top: 10rem !important; }
+
 .mr-5 {
   margin-right: 3rem !important; }
 
