--- a/public/scss/custom.css
+++ b/public/scss/custom.css
@@ -6781,4 +6781,4 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=custom.css.map */
