--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -25,52 +25,47 @@
     <section>
         <div class="container">
 
-            <div class="row">
+            <div class="row mb-3">
 
                 <!-- Blog Entries Column -->
                 <div class="col-md-8">
 
-                    <h1 class="page-header">
-                        Page Heading
-                        <small>Secondary Text</small>
-                    </h1>
-
                     <!-- First Blog Post -->
                     {% for chapter in chapters %}
-                    <h2>
-                        <a href="#">{{ chapter.title }}</a>
-                    </h2>
-                    <p class="lead">
-                        by <a href="index.php">Start Bootstrap</a>
-                    </p>
-                    <p>Posted on August 28, 2013 at 10:00 PM</p>
-                    <hr>
-                    <img class="img-fluid" src="http://placehold.it/730x250" alt="">
-                    <hr>
-                    <p>{{ chapter.content }}</p>
-                    <a class="btn btn-primary" href="index.php?action=chapter">Read More <span
-                                class="glyphicon glyphicon-chevron-right"></span></a>
-                    <hr>
+                        <div class="card card-body mb-3">
+                            <h4><a href="#">{{ chapter.title }}</a></h4>
+                            <div class="bg-light p-2 mb-3">ecrit par JF le {{ chapter.content_date|date("m/d/Y") }}</div>
+                        </div>
+
+                        <img class="img-fluid" src="http://placehold.it/730x250" alt="">
+
+                        <p class="card-text">
+                            {{ chapter.content |raw }}
+                        </p>
+
+                        <a class="btn btn-primary" href="index.php?action=chapter/{{ chapter.id }}">Read More <span
+                                    class="glyphicon glyphicon-chevron-right"></span></a>
+                        <hr>
                     {% endfor %}
 
-                    <!-- Second Blog Post -->
-                    <h2>
-                        <a href="#">Blog Post Title</a>
-                    </h2>
-                    <p class="lead">
-                        by <a href="index.php">Start Bootstrap</a>
-                    </p>
-                    <p>Posted on August 28, 2013 at 10:45 PM</p>
-                    <hr>
-                    <img class="img-fluid" src="http://placehold.it/730x250" alt="">
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores
-                        harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio
-                        minima dolorum perferendis labore impedit voluptates!</p>
-                    <a class="btn btn-primary" href="#">Read More <span
-                                class="glyphicon glyphicon-chevron-right"></span></a>
+                    {#                    <!-- Second Blog Post -->#}
+                    {#                    <h2>#}
+                    {#                        <a href="#">Blog Post Title</a>#}
+                    {#                    </h2>#}
+                    {#                    <p class="lead">#}
+                    {#                        by <a href="index.php">Start Bootstrap</a>#}
+                    {#                    </p>#}
+                    {#                    <p>Posted on August 28, 2013 at 10:45 PM</p>#}
+                    {#                    <hr>#}
+                    {#                    <img class="img-fluid" src="http://placehold.it/730x250" alt="">#}
+                    {#                    <hr>#}
+                    {#                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores#}
+                    {#                        harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio#}
+                    {#                        minima dolorum perferendis labore impedit voluptates!</p>#}
+                    {#                    <a class="btn btn-primary" href="#">Read More <span#}
+                    {#                                class="glyphicon glyphicon-chevron-right"></span></a>#}
 
-                    <hr>
+                    {#                    <hr>#}
 
                     <!-- Pager -->
 
