--- a/app/views/pages/admin.base.html.twig
+++ b/app/views/pages/admin.base.html.twig
@@ -17,7 +17,9 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,500,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css"/>
-        {% block title %}
+        <script src="https://cloud.tinymce.com/5/tinymce.min.js?apiKey=7o0gj8jzupds8lk9jcvo0lbz3z84azgblrsk8b744bt1nxjt"></script>
+
+    {% block title %}
             <title>{{ title }}</title>
         {% endblock %}
     {% endblock %}
@@ -62,9 +64,11 @@
                             <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action">Chapitres</a>
                             <a href="index.php?action=adminComments" class="list-group-item list-group-item-action">Commentaires</a>
                         {% endblock %}
+
                         <a href="index.php?action=logout" class="list-group-item list-group-item-action">Logout</a>
                     </div>
                 </div>
+
                 <div class="col-md-8">
                     {% block principal %}
                         {{ admin_id }}
@@ -88,6 +92,11 @@
             integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
             crossorigin="anonymous"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        tinymce.init({
+            selector: '#content',
+        });
+    </script>
 {% endblock %}
 </body>
 </html>
