--- a/app/views/pages/admin.chapters.html.twig
+++ b/app/views/pages/admin.chapters.html.twig
@@ -14,7 +14,7 @@
         </div>
         <div class="col-md-6 ">
             <div class="btn-group btn-group-sm float-right" role="group" aria-label="...">
-                <a href="index.php?action=add" class="btn btn-success">
+                <a href="index.php?action=addChapters" class="btn btn-success">
                     <i class="fas fa-pencil-alt"></i>
                     Nouveau</a>
                 <a href="index.php?action=edit" class="btn btn-info">Edit</a>
