--- a/app/views/pages/admin.add.chapters.html.twig
+++ b/app/views/pages/admin.add.chapters.html.twig
@@ -72,14 +72,17 @@
                             <p>Ajouter un chapitre avec cet formulaire</p>
                             <form action="index.php?action=addChapters" method="POST">
                                 <div class="form-group">
+
                                     <label for="title" >Titre</label>
-                                    <input type="title" name="title"
-                                           class="form-control form-control-lg{{ (title_err is not empty) ? 'is-invalid' : '' }}" placeholder="Votre titre ici"
+                                    <input type="text" name="title"
+                                           class="form-control form-control-lg {{ (title_err is not empty) ? 'is-invalid' : '' }}"
+                                           placeholder="Votre titre ici"
                                            value="{{ title }}">
+
                                     <span class="invalid-feedback">{{ title_err }}</span>
 
                                     <label for="content">Contenu</label>
-                                    <textarea  name="content"
+                                    <textarea  name="content" id="content"
                                            class="form-control {{ (content_err is not empty) ? 'is-invalid' : '' }}"
                                            placeholder="Votre contenu ici">{{ content }}</textarea>
                                     <span class="invalid-feedback">{{ content_err }}</span>
