--- a/app/views/pages/admin.base.html.twig
+++ b/app/views/pages/admin.base.html.twig
@@ -54,7 +54,7 @@
 {% endblock %}
 
 {% block body %}
-    <section>
+    <section class="container-fluid">
         <div class="mt-5 pt-5 py-5 px-2">
             <div class="row">
                 <div class="col-md-4 d-none d-lg-block">
