--- a/app/views/pages/admin.base.html.twig
+++ b/app/views/pages/admin.base.html.twig
@@ -20,7 +20,7 @@
         <script src="https://cloud.tinymce.com/5/tinymce.min.js?apiKey=7o0gj8jzupds8lk9jcvo0lbz3z84azgblrsk8b744bt1nxjt"></script>
 
     {% block title %}
-            <title>{{ title }}</title>
+            <title>Admin JF</title>
         {% endblock %}
     {% endblock %}
     {% block stylesheets %}{% endblock %}
