--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -33,7 +33,7 @@
                     <!-- First Blog Post -->
                     {% for chapter in chapters %}
                         <div class="card card-body mb-3">
-                            <h4><a href="#">{{ chapter.title }}</a></h4>
+                            <h4><a href="#">{{ chapter.title |raw }}</a></h4>
                             <div class="bg-light p-2 mb-3">ecrit par JF le {{ chapter.content_date|date("m/d/Y") }}</div>
                         </div>
 
