--- a/app/views/pages/admin.chapters.html.twig
+++ b/app/views/pages/admin.chapters.html.twig
@@ -8,6 +8,9 @@
 {% endblock %}
 
 {% block principal %}
+    {{ chapter_message }}
+{#    {{ dump(chapter_message) }}#}
+{#    <div class="alert alert-success" id="msg-flash">Nouveau chapitre ajoute avec success</div>#}
     <div class="row">
         <div class="col-md-6">
             <h2>Chapitres</h2>
