--- a/app/views/pages/admin.chapters.html.twig
+++ b/app/views/pages/admin.chapters.html.twig
@@ -9,8 +9,8 @@
 
 {% block principal %}
     {{ chapter_message }}
-{#    {{ dump(chapter_message) }}#}
-{#    <div class="alert alert-success" id="msg-flash">Nouveau chapitre ajoute avec success</div>#}
+    {#    {{ dump(chapter_message) }}#}
+    {#    <div class="alert alert-success" id="msg-flash">Nouveau chapitre ajoute avec success</div>#}
     <div class="row">
         <div class="col-md-6">
             <h2>Chapitres</h2>
@@ -20,8 +20,6 @@
                 <a href="index.php?action=addChapters" class="btn btn-success">
                     <i class="fas fa-pencil-alt"></i>
                     Nouveau</a>
-                <a href="index.php?action=edit" class="btn btn-info">Edit</a>
-                <a href="index.php?action=delete" class="btn btn-warning">Delete</a>
             </div>
         </div>
     </div>
@@ -36,42 +34,27 @@
     <table class="table table-responsive-md table-hover">
         <thead>
         <tr>
-            <th scope="col"><input type="checkbox"></th>
             <th scope="col">#</th>
             <th scope="col">Chapitre</th>
-            <th scope="col">Date</th>
-            <th scope="col">Author</th>
+            <th scope="col"><i class="fa fa-edit" aria-hidden="true"></i></th>
+            <th scope="col"><i class="fa fa-trash" aria-hidden="true"></i></th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td scope="row"><input type="checkbox"></td>
-            <th scope="row">1</th>
-            <td><a href="">Mark</a></td>
-            <td>Otto</td>
-            <td>@mdo</td>
-        </tr>
-        <tr>
-            <td scope="row"><input type="checkbox"></td>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-        </tr>
-        <tr>
-            <td scope="row"><input type="checkbox"></td>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-        </tr>
+        {% for chapter in chapters %}
+            <tr>
+
+                <th scope="row">{{ loop.index }}</th>
+                <td><a href="">{{ chapter.title }}</a></td>
+                <td><a href="">approuve</a></td>
+                <td><a href="">desapprouve</a></td>
+
+            </tr>
+        {% endfor %}
+
         </tbody>
     </table>
 
-    <ul>
-        {% for chapter in chapters %}
-            <li>{{ chapter.title }}</li>
-        {% endfor %}
-    </ul>
 
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
