--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -43,7 +43,7 @@
                             {{ chapter.content |raw }}
                         </p>
 
-                        <a class="btn btn-primary" href="index.php?action=chapter/{{ chapter.id }}">Read More <span
+                        <a class="btn btn-primary" href="index.php?action=showChapter&id={{ chapter.id }}">Read More <span
                                     class="glyphicon glyphicon-chevron-right"></span></a>
                         <hr>
                     {% endfor %}
