--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -13,10 +13,7 @@
             <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
             <blockquote class="blockquote">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores, consequuntur
-                    debitis eaque eos error explicabo ipsum quae sit. Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Aliquam atque corporis culpa debitis earum eos esse facere, harum id in optio
-                    quasi qui quo saepe sequi. Animi dignissimos repellat tempore.
+                   {{ chapters.content |raw }}
                 </p>
                 <footer class="blockquote-footer">Mark Twain</footer>
             </blockquote>
