--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -3,6 +3,11 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
+//flash message
+.mt-10 { margin-top: 5rem  }
+#msg-flash { margin-bottom: -5rem !important;}
+
+
 .navbar {
   font-weight: 100;
   position: absolute;
@@ -25,6 +30,8 @@ body {
   }
 
 }
+
+
 
 #showcase {
   background: url("../images/main.jpeg") bottom / cover no-repeat;
