--- a/app/views/pages/admin.base.html.twig
+++ b/app/views/pages/admin.base.html.twig
@@ -46,7 +46,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="index.php?action=home" class="nav-link">Deconnexion</a>
+                    <a href="index.php?action=logout" class="nav-link">Deconnexion</a>
                 </li>
             </ul>
         </div>
