--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -13,7 +13,10 @@
             <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
             <blockquote class="blockquote">
                 <p>
-                   {{ chapters.content |raw }}
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores, consequuntur
+                    debitis eaque eos error explicabo ipsum quae sit. Lorem ipsum dolor sit amet, consectetur
+                    adipisicing elit. Aliquam atque corporis culpa debitis earum eos esse facere, harum id in optio
+                    quasi qui quo saepe sequi. Animi dignissimos repellat tempore.
                 </p>
                 <footer class="blockquote-footer">Mark Twain</footer>
             </blockquote>
@@ -30,41 +33,29 @@
                     <!-- Blog Post -->
 
                     <!-- Title -->
-                    <h1>Blog Post Title</h1>
+                    <h1>{{ chapters.title |raw }}</h1>
 
                     <!-- Author -->
                     <p class="lead">
-                        by <a href="#">Start Bootstrap</a>
+                        écrit par <a href="index.php?action=bio">Jean Forteroche</a>
                     </p>
 
                     <hr>
 
                     <!-- Date/Time -->
-                    <p> Posted on August 24, 2013 at 9:00 PM</p>
+                    <p> Publie le {{ chapters.content_date | date('d/m/Y') }}</p>
 
                     <hr>
 
                     <!-- Preview Image -->
-                    <img class="img-fluid" src="http://placehold.it/900x300" alt="">
+                    {{ dump(chapters) }}
+                    <img class="img-fluid" src="https://picsum.photos/id/{{ id }}/900/300" alt="">
 
                     <hr>
 
                     <!-- Post Content -->
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati,
-                        aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni
-                        recusandae laborum minus inventore?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum
-                        quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat.
-                        Temporibus, voluptatibus.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto
-                        blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione
-                        repellat perspiciatis. Enim, iure!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas
-                        placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem
-                        obcaecati?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo,
-                        aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam
-                        recusandae? Qui, necessitatibus, est!</p>
+{#                    class="lead"#}
+                    <p class="lead">{{ chapters.content |raw }}</p>
 
                     <hr>
 
