--- a/app/views/pages/admin.edit.chapters.html.twig
+++ b/app/views/pages/admin.edit.chapters.html.twig
@@ -1,16 +1,21 @@
 ﻿{% extends "admin.base.html.twig" %}
 {% block principal %}
     <div class="card card-body bg-light ">
+        {% if chapter %}
+        <h2>Modifier Chapitre</h2>
+        {% else %}
         <h2>Ajouter Chapitre</h2>
+        {% endif %}
+        {{ dump(chapter) }}
         <p>Ajouter un chapitre avec cet formulaire</p>
-        <form action="index.php?action=addChapters" method="POST">
+        <form action="{{ chapter ? 'index.php?action=editChapter&id='~chapter.id : 'index.php?action=addChapter' }}" method="POST">
             <div class="form-group">
                 <div class="py-2">
                     <label for="title">Titre:</label>
                     <input type="text" name="title"
                            class="form-control form-control-lg {{ (title_err is not empty) ? 'is-invalid' : '' }}"
                            placeholder="Votre titre ici"
-                           value="{{ title }}">
+                           value="{{ chapter ? chapter.title : title }}">
 
                     <span class="invalid-feedback">{{ title_err }}</span>
                 </div>
@@ -18,11 +23,11 @@
                     <label for="content">Contenu:</label>
                     <textarea name="content" id="content"
                               class="form-control {{ (content_err is not empty) ? 'is-invalid' : '' }}"
-                              placeholder="Votre contenu ici">{{ content }}</textarea>
+                              placeholder="Votre contenu ici">{{ chapter ? chapter.content : content }}</textarea>
                     <span class="invalid-feedback">{{ content_err }}</span>
                 </div>
             </div>
-            <input type="submit" class="btn btn-success" value="Ajouter">
+            <input type="submit" class="btn btn-success" value="{{ chapter ? 'Modifier' : 'Ajouter' }}">
 
         </form>
     </div>
