--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -45,29 +45,11 @@
                             {{ chapter.content |raw }}
                         </p>
 
-                        <a class="btn btn-primary" href="index.php?action=showChapter&id={{ chapter.id }}">Read More <span
-                                    class="glyphicon glyphicon-chevron-right"></span></a>
+                        <a class="btn btn-primary" href="index.php?action=showChapter&id={{ chapter.id }}">Voir plus
+                            <span class="glyphicon glyphicon-chevron-right"></span></a>
                         <hr>
                     {% endfor %}
 
-                    {#                    <!-- Second Blog Post -->#}
-                    {#                    <h2>#}
-                    {#                        <a href="#">Blog Post Title</a>#}
-                    {#                    </h2>#}
-                    {#                    <p class="lead">#}
-                    {#                        by <a href="index.php">Start Bootstrap</a>#}
-                    {#                    </p>#}
-                    {#                    <p>Posted on August 28, 2013 at 10:45 PM</p>#}
-                    {#                    <hr>#}
-                    {#                    <img class="img-fluid" src="http://placehold.it/730x250" alt="">#}
-                    {#                    <hr>#}
-                    {#                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores#}
-                    {#                        harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio#}
-                    {#                        minima dolorum perferendis labore impedit voluptates!</p>#}
-                    {#                    <a class="btn btn-primary" href="#">Read More <span#}
-                    {#                                class="glyphicon glyphicon-chevron-right"></span></a>#}
-
-                    {#                    <hr>#}
 
                     <!-- Pager -->
 
