--- a/app/views/pages/admin.chapters.html.twig
+++ b/app/views/pages/admin.chapters.html.twig
@@ -1,9 +1,9 @@
 ﻿{% extends "admin.base.html.twig" %}
 
 {% block pagesActive %}
-    <a href="index.php?action=adminView" class="list-group-item list-group-item-action">Dashboard</a>
-    <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action active">Chapitres</a>
-    <a href="index.php?action=adminComments" class="list-group-item list-group-item-action">Commentaires</a>
+    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+    <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action active"><i class="fas fa-book"></i> Chapitres</a>
+    <a href="index.php?action=adminComments" class="list-group-item list-group-item-action"><i class="fas fa-comments"></i> Commentaires</a>
 
 {% endblock %}
 
@@ -18,7 +18,7 @@
         <div class="col-md-6">
             <div class="btn-group btn-group-sm float-right" role="group" aria-label="...">
                 <a href="index.php?action=addChapter" class="btn btn-success mr-2">
-                    <i class="fas fa-pencil-alt"></i>Nouveau</a>
+                    <i class="fa fa-plus fa-fw"></i>Nouveau</a>
             </div>
         </div>
     </div>
