--- a/app/views/pages/admin.comments.html.twig
+++ b/app/views/pages/admin.comments.html.twig
@@ -1,8 +1,8 @@
 {% extends "admin.base.html.twig" %}
 {% block pagesActive %}
-    <a href="index.php?action=adminView" class="list-group-item list-group-item-action">Dashboard</a>
-    <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action">Chapitres</a>
-    <a href="index.php?action=adminComments" class="list-group-item list-group-item-action active">Commentaires</a>
+    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+    <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action"><i class="fas fa-book"></i> Chapitres</a>
+    <a href="index.php?action=adminComments" class="list-group-item list-group-item-action active"><i class="fas fa-comments"></i> Commentaires</a>
 
 {% endblock %}
  {% block principal %}
