comments add test

--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -63,12 +63,25 @@
 
                     <!-- Comments Form -->
                     <div class="well">
-                        <h4>Leave a Comment:</h4>
-                        <form role="form">
+                        {{ dump(comments) }}
+                        <h4>Laissez nou un commentaire:</h4>
+                        <form action="index.php?action=addComment" method="POST">
+
                             <div class="form-group">
-                                <textarea class="form-control" rows="3"></textarea>
+                                <label for="comment_author">Author</label>
+                                <input type="text" class="form-control" name="comment_author">
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+
+                            <div class="form-group">
+                                <label for="comment_email">Email</label>
+                                <input type="email" class="form-control" name="comment_email">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="comment_content">Votre commentaire</label>
+                                <textarea class="form-control" rows="3" name="comment_content"></textarea>
+                            </div>
+                            <button name="create_comment" type="submit" class="btn btn-primary">Submit</button>
                         </form>
                     </div>
 
