--- a/app/views/pages/admin.comments.html.twig
+++ b/app/views/pages/admin.comments.html.twig
@@ -42,16 +42,23 @@
          </thead>
 
          {{ dump() }}
-         {% for chapter in chapters %}
+         {% for comment in comments %}
              <tbody>
              <tr>
 
-                 <td colspan="2"><a href="index.php?action=showChapter&id={{ chapter.id }}">{{ chapter.title |raw }}</a></td>
+                 <td><a href="index.php?action=showChapter&id={{ comment.comment_id }}">{{ comment.comment_author }}</a></td>
+                 <td>{{ comment.comment_content }}</td>
+                 <td>{{ comment.comment_email }}</td>
+                 <td>{{ comment.comment_status }}</td>
+                 <td>{{ 'Some title' }}</td>
+                 <td>{{ comment.comment_date }}</td>
                  <td>
                      <div class="btn-group btn-group-sm float-right" role="group" aria-label="...">
-                         <a href="index.php?action=editChapter&id={{ chapter.id }}" class="btn btn-warning">
-                             <i class="fa fa-edit"></i>Modifier</a>
-                         <a href="index.php?action=deleteChapter&id={{ chapter.id }}" class="btn btn-danger">
+                         <a href="index.php?action=editComment&id={{ comment.comment_id }}" class="btn btn-success">
+                             <i class="far fa-thumbs-up"></i>O</a>
+                         <a href="index.php?action=editComment&id={{ comment.comment_id }}" class="btn btn-warning">
+                             <i class="far fa-thumbs-down"></i>N</a>
+                         <a href="index.php?action=deleteComment&id={{ comment.comment_id }}" class="btn btn-danger">
                              <i class="fa fa-trash"></i>Effacer</a>
                      </div>
                  </td>
