--- a/app/views/pages/admin.comments.html.twig
+++ b/app/views/pages/admin.comments.html.twig
@@ -27,7 +27,7 @@
      </nav>
 
      <table class="table table-responsive-md table-hover">
-         <thead>
+         <thead class="thead-light">
          <tr>
 
              <th scope="col">Author</th>
