--- a/app/views/pages/admin.edit.chapters.html.twig
+++ b/app/views/pages/admin.edit.chapters.html.twig
@@ -1,4 +1,12 @@
 ﻿{% extends "admin.base.html.twig" %}
+
+{% block pagesActive %}
+    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+    <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action active"><i class="fas fa-book"></i> Chapitres</a>
+    <a href="index.php?action=adminComments" class="list-group-item list-group-item-action"><i class="fas fa-comments"></i> Commentaires</a>
+
+{% endblock %}
+
 {% block principal %}
     <div class="card card-body bg-light ">
         {% if chapter %}
