--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -73,24 +73,28 @@
                                 <div class="col-sm-10">
                                     <input type="text"
                                            class="form-control {{ (comment_author_err is not empty) ? 'is-invalid' : '' }}"
-                                           name="comment_author" value="{{ comment.author }}">
+                                           name="comment_author" value="{{ comment_author }}">
                                 </div>
-
+                                <span class="invalid-feedback d-block text-center">{{ comment_author_err }}</span>
 
 
                             </div>
-                            <span class="invalid-feedback">{{ comment_author_err }}</span>
+
 
                             <div class="form-group row">
                                 <label for="comment_email" class="col-sm-2">Email</label>
                                 <div class="col-sm-10">
-                                    <input type="email" class="form-control" name="comment_email">
+                                    <input type="text"
+                                           class="form-control {{ (comment_email_err is not empty) ? 'is-invalid' : '' }}"
+                                           name="comment_email" value="{{ comment_email }}">
                                 </div>
+                                <span class="invalid-feedback d-block text-center">{{ comment_email_err }}</span>
                             </div>
 
                             <div class="form-group">
                                 <label for="comment_content">Votre commentaire</label>
-                                <textarea class="form-control" rows="3" name="comment_content"></textarea>
+                                <textarea class="form-control {{ (comment_content_err is not empty) ? 'is-invalid' : '' }}" rows="3" name="comment_content">{{ comment_content }}</textarea>
+                                <span class="invalid-feedback d-block text-center">{{ comment_content_err }}</span>
                             </div>
                             <button name="create_comment" type="submit" class="btn btn-primary">Submit</button>
                         </form>
