--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -3,9 +3,20 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
+.was-validated .form-control:invalid, .form-control.is-invalid, .was-validated .custom-select:invalid, .custom-select.is-invalid {
+  .invalid-feedback {
+    display: block !important;
+  }
+}
+
 //flash message
-.mt-10 { margin-top: 5rem  }
-#msg-flash { margin-bottom: -5rem !important;}
+.mt-10 {
+  margin-top: 5rem
+}
+
+#msg-flash {
+  margin-bottom: -5rem !important;
+}
 
 
 .navbar {
@@ -30,7 +41,6 @@ body {
   }
 
 }
-
 
 
 #showcase {
@@ -78,12 +88,13 @@ body {
   }
 }
 
-#adminFooter p{
+#adminFooter p {
   margin-top: 30px;
   padding-top: 20px;
   padding-bottom: 20px;
   color: white;
 }
+
 
 //login page
 #login {
@@ -94,6 +105,7 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
+
   a {
     text-decoration: none;
   }
