--- a/app/views/pages/admin.chapters.html.twig
+++ b/app/views/pages/admin.chapters.html.twig
@@ -50,7 +50,7 @@
                     <div class="btn-group btn-group-sm float-right" role="group" aria-label="...">
                         <a href="index.php?action=editChapter&id={{ chapter.id }}" class="btn btn-warning">
                             <i class="fa fa-edit"></i>Modifier</a>
-                        <a href="index.php?action=deleteChapter&id={{ chapter.id }}" class="btn btn-danger">
+                        <a href="index.php?action=deleteChapter&id={{ chapter.id }}" class="btn btn-danger" onclick="return confirm('Confirmer la suppression ?');">
                             <i class="fa fa-trash"></i>Effacer</a>
                     </div>
                 </td>
